# hpffp

./: .gitignore  .gitmodules  README.md  notes.org
Chapter15/: Exercises.hs  p591.hs
Chapter15/orphan-instance/: ListyInstances.hs
Chapter16/: P646.hs  exercises.hs  p635.txt  p638.hs  p640.hs  p650.hs  p651.hs
Chapter17/: Exercises.hs  P686.hs  p684.hs  p686.hs  p688.hs  p689.hs  p701.hs  p712.hs  p718.hs
Chapter18/: Exercises.hs  exercises.hs  p727.hs  p751.hs
Chapter19/: p774_LiftOverIO.hs  p775_UUID.hs
Chapter19/url-shortener/: LICENSE  stack.yaml  url-shortener.cabal
Chapter19/url-shortener/src/: Main.hs
Chapter20/: Exercises.hs  P804.hs  exercises.hs
Chapter21/: Exercises.hs  exercises.hs
Chapter21/wreq/: Main.hs
Chapter22/: p834.hs  p839.hs
chapter10/: exercises.hs  p361.hs  p366.hs  p373.hs
chapter11/: exercises.hs  p393.hs  p402.hs  p411.hs  p413.hs  p414.hs  p423.hs  p426.hs  p440-btrees.hs  phone.hs
chapter12/: exercises.hs  p462.hs
chapter13/: cipher.hs  gimmeperson.hs  palindrome.hs
chapter13/game/: game.cabal
chapter13/game/src/: Game.hs  Main.hs
chapter13/game/test/: tests.hs
chapter14/exercises/: LICENSE
chapter14/exercises/src/: Exercises.hs
chapter14/exercises/test/: tests.hs
chapter14/morse/: morse.cabal  package.yaml
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/test/: tests.hs
chapter14/testing/: testing.cabal
chapter14/testing/.stack-work/install/x86_64-linux-tinfo6/lts-12.12/8.4.3/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  ansi-terminal-0.8.1-DTnXTZHQH9cDx7RXC7iISb  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  hspec-2.5.5-FuOC97NUjg47UG2A5AEwkM  hspec-core-2.5.5-IgfpDVQdTmGjbzfYzu390  hspec-discover-2.5.5-3lbzfYKyCX74uo24qYYO8u  hspec-expectations-0.8.2-7lpBAWb1yuYLnEELJ6wtYs  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  quickcheck-io-0.2.0-EkaMZi89NOa4JiMdRU98Zc  setenv-0.1.1.3-H1xmIqlPy4yIDquO6eJhBl  stm-2.4.5.1-1n1oRyz2WxkGi5pMiXlR3y  testing-0.1.0.0-C94u2qkVXYNKwPzmNgTOMO  testing-0.1.0.0-HE8ymHR4HnN4Jv1peuJj1o  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
chapter14/testing/.stack-work/install/x86_64-linux-tinfo6/lts-12.12/8.4.3/lib/x86_64-linux-ghc-8.4.3/testing-0.1.0.0-C94u2qkVXYNKwPzmNgTOMO/: Addition.dyn_hi  Addition.hi
chapter14/testing/.stack-work/install/x86_64-linux-tinfo6/lts-12.12/8.4.3/lib/x86_64-linux-ghc-8.4.3/testing-0.1.0.0-HE8ymHR4HnN4Jv1peuJj1o/: Addition.dyn_hi  Addition.hi
chapter14/testing/src/: Addition.hs
chapter15/: exercises.hs  p584.hs  p597.hs
chapter15/orphan-instance/: Listy.hs
chapter16/: p620.hs
chapter2/: 2.hs  exercise.hs  p59.hs  p60.hs
chapter3/: exercise.hs  p72.hs  p73.hs  p79.hs  reverse.hs
chapter4/: exercise.hs  p91.hs
chapter5/: arith3broken.hs  exercises.hs  exercises.org  song.hs  type-know-do.hs  typeInference1.hs
chapter6/: exercises.hs  p179.hs  p191.hs
chapter7/: arith4.hs  exercises.hs  p229.hs  p237.hs  p239.hs  p244.hs  p251.hs  p267.hs
chapter8/: exercises.hs  p280.hs
chapter9/: .#p307.hs  execises.hs  p301.hs  p304.hs  p307.hs  p308.hs  p309.hs  p313.hs  p320.hs  p329.hs  p331.hs  p333.hs
