name:                url-shortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexryndin/url-shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Ryndin
maintainer:          alexnryndin@gmail.com
copyright:           Rlambda
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable url-shortener
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , hedis
                      , mtl
                      , network-uri
                      , random
                      , scotty
                      , semigroups
                      , text
                      , transformers
