name:                game
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexryndin/hgame#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Ryndin 
maintainer:          alexnryndin@gmail.com 
copyright:           2018 RA 
category:            Game 
build-type:          Simple
extra-source-files:  data/dict
cabal-version:       >=1.10
extra-source-files:  README.md

executable game
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
