name:                game
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexryndin/hgame#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Ryndin 
maintainer:          alexnryndin@gmail.com 
copyright:           2018 RA 
category:            Game 
build-type:          Simple
extra-source-files:  data/dict
cabal-version:       >=1.10
extra-source-files:  README.md

executable game
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , random
                       , hspec
                       , split

library
  exposed-modules:      Game, Main
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:       src
  build-depends:        base >=4.7 && <5
                      , containers
                      , QuickCheck
                      , random
  default-language: Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fwarn-tabs
  main-is:             tests.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck
                       , game
  default-language: Haskell2010