name:                testing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://alexryndin.me
license:             BSD3
license-file:        LICENSE
author:              Alex Ryndin
maintainer:          alexnryndin@gmail.com
copyright:           2018 RA
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010